package GastosFamiliares.Modelo.Enumeraciones;

/**
 *
 * @author John Carlos Arrieta Arrieta
 */
public enum EstadoBolsaAhorroEnum {
    ACTIVA, 
    CERRADA, 
    LOGRADA 
}
