package GastosFamiliares.Modelo.Enumeraciones;

/**
 *
 * @author John Carlos Arrieta Arrieta
 */
public enum GeneroEnum {
    MASCULINO,
    FEMENINO,
    OTROS
}
