
package GastosFamiliares.Modelo.Enumeraciones;

/**
 *
 * @author John Carlos Arrieta Arrieta
 */
public enum RolUsuarioEnum {
    ADMINISTRADOR,
    USUARIO
}
